--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Run tests 🧪
-        run: composer test
+        run: vendor/bin/phpunit
 
       - uses: actions/checkout@v2
       - name: Run lint 👀
