--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        php: [7.3, 7.4, 8.0]
+        php: [7.3, 7.4]
 
     steps:
       - name: Checkout 🛎
