--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /vendor/
+build
 node_modules/
 npm-debug.log
 yarn-error.log
@@ -21,3 +22,5 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+phpstan.neon
+testbench.yaml
