--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "^7.4|^8.0",
         "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.0"
+        "illuminate/contracts": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.8",
+        "nunomaduro/larastan": "^1.0",
         "orchestra/testbench": "^6.13",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.9",
@@ -37,8 +39,10 @@
         }
     },
     "scripts": {
+        "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/phpunit tests --colors=always",
-        "test-coverage": "vendor/bin/phpunit tests --coverage-html coverage"
+        "test-coverage": "vendor/bin/phpunit tests --coverage-html coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true
