--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "spatie/laravel-package-tools": "^1.4.3",
+        "php": "^8.1",
+        "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.8",
+        "laravel/pint": "^1.0",
         "nunomaduro/larastan": "^1.0",
         "orchestra/testbench": "^6.13",
         "phpunit/phpunit": "^9.3",
