--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^7.4|^8.0",
         "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/larastan": "^1.0",
-        "orchestra/testbench": "^6.13",
+        "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.9",
         "vimeo/psalm": "^4.4"
