--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.3",
         "spatie/laravel-ray": "^1.9",
+        "tightenco/duster": "^2.0",
         "vimeo/psalm": "^4.4"
     },
     "autoload": {
