--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -8,4 +8,6 @@ parameters:
         - config
         - database
     tmpDir: build/phpstan
+    inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
